# youbot_move_group_tests

./: CMakeLists.txt  Readme.md  package.xml
launch/: gazebo_pick_n_place.launch  move_group_tests.launch  youbot_pick_n_place.launch  youbot_pick_n_place_with_box.launch
src/: pub_grip.cpp  youbot_move_group_tests.cpp  youbot_pick_n_place.cpp  youbot_pick_n_place_with_box.cpp.autosave
